# flutter_cpp_opencv_example

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native_process.cpp
android/app/src/main/kotlin/com/example/native_test/: MainActivity.kt
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/native/: native_control.dart  native_process.dart
